@@ -60,11 +60,27 @@ public class Analysis<
     /** The current control flow graph to perform the analysis on. */
     protected @Nullable ControlFlowGraph cfg;
 
-    /** The associated processing environment. */
-    protected final ProcessingEnvironment env;
+    /**
+     * The associated processing environment.
+     *
+     * @deprecated as {@code env} is moved to {@link
+     *     org.checkerframework.framework.flow.CFAbstractAnalysis}, this field will be removed in
+     *     next major update
+     */
+    // TODO: Remove @SuppressWarnings("HidingField") in CFAbstractAnalysis#env when this field is
+    // being removed.
+    @Deprecated protected final @Nullable ProcessingEnvironment env;
 
-    /** Instance of the types utility. */
-    protected final Types types;
+    /**
+     * Instance of the types utility.
+     *
+     * @deprecated as {@code types} is moved to {@link
+     *     org.checkerframework.framework.flow.CFAbstractAnalysis}, this field will be removed in
+     *     next major update
+     */
+    // TODO: Remove @SuppressWarnings("HidingField") in CFAbstractAnalysis#types when this field is
+    // being removed.
+    @Deprecated protected final @Nullable Types types;
 
     /** Then stores before every basic block (assumed to be 'no information' if not present). */
     protected final IdentityHashMap<Block, S> thenStores;
@@ -131,24 +147,62 @@ public class Analysis<
 
     /**
      * Construct an object that can perform a org.checkerframework.dataflow analysis over a control
-     * flow graph. The transfer function is set later using {@code setTransferFunction}.
+     * flow graph. The transfer function is set by the subclass, e.g., {@link
+     * org.checkerframework.framework.flow.CFAbstractAnalysis}, later.
+     *
+     * @deprecated as {@code env} is moved to {@link
+     *     org.checkerframework.framework.flow.CFAbstractAnalysis}, this helper constructor will be
+     *     removed in next major update. Use {@link #Analysis()}, {@link #Analysis(TransferFunction,
+     *     int)}, {@link #Analysis(TransferFunction)} or {@link #Analysis(int)} instead
+     * @param env associated processing environment
      */
+    @Deprecated
     public Analysis(ProcessingEnvironment env) {
         this(null, -1, env);
     }
 
     /**
      * Construct an object that can perform a org.checkerframework.dataflow analysis over a control
-     * flow graph, given a transfer function.
+     * flow graph. The transfer function is set by the subclass, e.g., {@link
+     * org.checkerframework.framework.flow.CFAbstractAnalysis}, later.
      */
-    public Analysis(T transfer, ProcessingEnvironment env) {
-        this(transfer, -1, env);
+    public Analysis() {
+        this(null, -1);
+    }
+
+    /**
+     * Construct an object that can perform a org.checkerframework.dataflow analysis over a control
+     * flow graph. The transfer function is set by the subclass, e.g., {@link
+     * org.checkerframework.framework.flow.CFAbstractAnalysis}, later.
+     *
+     * @param maxCountBeforeWidening number of times a block can be analyzed before widening
+     */
+    public Analysis(int maxCountBeforeWidening) {
+        this(null, maxCountBeforeWidening);
     }
 
     /**
      * Construct an object that can perform a org.checkerframework.dataflow analysis over a control
      * flow graph, given a transfer function.
+     *
+     * @param transfer transfer function
      */
+    public Analysis(T transfer) {
+        this(transfer, -1);
+    }
+
+    /**
+     * Construct an object that can perform a org.checkerframework.dataflow analysis over a control
+     * flow graph, given a transfer function.
+     *
+     * @deprecated as {@code env} is moved to {@link
+     *     org.checkerframework.framework.flow.CFAbstractAnalysis}, this constructor will be removed
+     *     in next major update. Use {@link #Analysis(TransferFunction, int)} instead.
+     * @param transfer transfer function
+     * @param maxCountBeforeWidening number of times a block can be analyzed before widening
+     * @param env associated processing environment
+     */
+    @Deprecated
     public Analysis(@Nullable T transfer, int maxCountBeforeWidening, ProcessingEnvironment env) {
         this.env = env;
         this.types = env.getTypeUtils();
@@ -164,20 +218,73 @@ public class Analysis<
         this.finalLocalValues = new HashMap<>();
     }
 
-    /** The current transfer function. */
+    /**
+     * Construct an object that can perform a org.checkerframework.dataflow analysis over a control
+     * flow graph, given a transfer function.
+     *
+     * @param transfer transfer function
+     * @param maxCountBeforeWidening number of times a block can be analyzed before widening
+     */
+    public Analysis(@Nullable T transfer, int maxCountBeforeWidening) {
+        // The initialization of env and types can be removed in next version.
+        this.env = null;
+        this.types = null;
+        this.transferFunction = transfer;
+        this.maxCountBeforeWidening = maxCountBeforeWidening;
+        this.thenStores = new IdentityHashMap<>();
+        this.elseStores = new IdentityHashMap<>();
+        this.blockCount = maxCountBeforeWidening == -1 ? null : new IdentityHashMap<>();
+        this.inputs = new IdentityHashMap<>();
+        this.storesAtReturnStatements = new IdentityHashMap<>();
+        this.worklist = new Worklist();
+        this.nodeValues = new IdentityHashMap<>();
+        this.finalLocalValues = new HashMap<>();
+    }
+
+    /**
+     * The current transfer function.
+     *
+     * @return {@link #transferFunction}
+     */
     public @Nullable T getTransferFunction() {
         return transferFunction;
     }
 
-    public Types getTypes() {
+    /**
+     * Get the types utility.
+     *
+     * @deprecated as {@link #getTypes()} is moved to {@link
+     *     org.checkerframework.framework.flow.CFAbstractAnalysis}, this method will be removed in
+     *     next major update
+     * @return {@link #types}
+     */
+    @Deprecated
+    // TODO: Remove @SuppressWarnings("deprecation") in CFAbstractAnalysis#getTypes() when this
+    // method is being removed.
+    public @Nullable Types getTypes() {
         return types;
     }
 
-    public ProcessingEnvironment getEnv() {
+    /**
+     * Get the processing environment.
+     *
+     * @deprecated as {@link #getEnv()} is moved to {@link
+     *     org.checkerframework.framework.flow.CFAbstractAnalysis}, this method will be removed in
+     *     next major update
+     * @return {@link #env}
+     */
+    @Deprecated
+    // TODO: Remove @SuppressWarnings("deprecation") in CFAbstractAnalysis#getEnv() when this method
+    // is being removed.
+    public @Nullable ProcessingEnvironment getEnv() {
         return env;
     }
 
-    /** Perform the actual analysis. */
+    /**
+     * Perform the actual analysis.
+     *
+     * @param cfg the control flow graph used to perform analysis
+     */
     public void performAnalysis(ControlFlowGraph cfg) {
         assert !isRunning;
         isRunning = true;
