@@ -19,10 +19,8 @@ public class ConstantPropagationPlayground {
 
         // run the analysis and create a PDF file
         ConstantPropagationTransfer transfer = new ConstantPropagationTransfer();
-        // TODO: correct processing environment
-        @SuppressWarnings("nullness")
         Analysis<Constant, ConstantPropagationStore, ConstantPropagationTransfer> analysis =
-                new Analysis<>(transfer, null);
+                new Analysis<>(transfer);
         JavaSource2CFGDOT.generateDOTofCFG(inputFile, outputDir, method, clazz, true, analysis);
     }
 }
