@@ -2,10 +2,12 @@ package org.checkerframework.framework.flow;
 
 import java.util.List;
 import java.util.Set;
+import javax.annotation.processing.ProcessingEnvironment;
 import javax.lang.model.element.AnnotationMirror;
 import javax.lang.model.element.VariableElement;
 import javax.lang.model.type.TypeKind;
 import javax.lang.model.type.TypeMirror;
+import javax.lang.model.util.Types;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.checkerframework.common.basetype.BaseTypeChecker;
 import org.checkerframework.dataflow.analysis.Analysis;
@@ -58,12 +60,30 @@ public abstract class CFAbstractAnalysis<
     /** Initial abstract types for fields. */
     protected final List<Pair<VariableElement, V>> fieldValues;
 
+    /** The associated processing environment. */
+    @SuppressWarnings("HidingField")
+    protected final ProcessingEnvironment env;
+
+    /** Instance of the types utility. */
+    @SuppressWarnings("HidingField")
+    protected final Types types;
+
+    /**
+     * Create a CFAbstractAnalysis.
+     *
+     * @param checker a checker that contains command-line arguments and other information
+     * @param factory an annotated type factory to introduce type and dataflow rules
+     * @param fieldValues initial abstract types for fields
+     * @param maxCountBeforeWidening number of times a block can be analyzed before widening
+     */
     public CFAbstractAnalysis(
             BaseTypeChecker checker,
             GenericAnnotatedTypeFactory<V, S, T, ? extends CFAbstractAnalysis<V, S, T>> factory,
             List<Pair<VariableElement, V>> fieldValues,
             int maxCountBeforeWidening) {
-        super(null, maxCountBeforeWidening, checker.getProcessingEnvironment());
+        super(maxCountBeforeWidening);
+        env = checker.getProcessingEnvironment();
+        types = env.getTypeUtils();
         qualifierHierarchy = factory.getQualifierHierarchy();
         typeHierarchy = factory.getTypeHierarchy();
         dependentTypesHelper = factory.getDependentTypesHelper();
@@ -168,5 +188,25 @@ public abstract class CFAbstractAnalysis<
         annos.remove(f);
         annos.add(anno);
         return createAbstractValue(annos, underlyingType);
+    }
+
+    /**
+     * Get the types utility.
+     *
+     * @return {@link #types}
+     */
+    @SuppressWarnings("deprecation")
+    public Types getTypes() {
+        return types;
+    }
+
+    /**
+     * Get the processing environment.
+     *
+     * @return {@link #env}
+     */
+    @SuppressWarnings("deprecation")
+    public ProcessingEnvironment getEnv() {
+        return env;
     }
 }
