@@ -4,6 +4,8 @@ The old version still works, for backward compatibility.
 
 Implementation details:
  * Deprecated QualifierHierarchy#getTypeQualifiers.
+ * Deprecated Analysis#Analysis(ProcessingEnvironment) and Analysis#Analysis(T, int, ProcessingEnvironment),
+   use Analysis#Analysis(), Analysis#Analysis(int), Analysis#Analysis(T) and Analysis#Analysis(T, int) instead.
 
 ---------------------------------------------------------------------------
 
